# whirlpool

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  eslint.config.ts  main.py  package.json  pyproject.toml  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
apps/cli/: README.md  package.json
apps/cli/src/: cli.ts  index.ts
apps/cli/src/commands/: cache-clean.ts  disk.ts  index.ts  orphans-clean.ts  scan.ts  trash-empty.ts  trash-list.ts
apps/cli/src/utils/: constants.ts  normalize-argv.ts  orphans-prompt-labels.ts  out.ts  scan-candidates-table.ts  scan-progress.ts  scan-spinner-worker.ts
docs/: PRD-whirlpool-cli.md
packaging/macos/: AppIcon.icns  Info.plist.template
packaging/macos/icon-out/: README.txt
scripts/: build-icons.ts  build-macos-app.sh  install-whirlpool.sh
whirlpool/: cli.py
whirlpool/command/: __init__.py  application_group.py  cache.py  cache_group.py
whirlpool/disk/: application.py  cache.py  default.py  snapshot.py
whirlpool/models/: __init__.py  application.py  project.py
whirlpool/utils/: file.py  format.py  platform.py
